<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sofra</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Splash button string -->
    <string name="order_food">Order food</string>
    <string name="sell_food">Sell food</string>

    <!-- App images description -->
    <string name="splash_activity_image_top">dish of meat and salad</string>
    <string name="splash_activity_image_center">sofra app image</string>
    <string name="splash_activity_image_bottom">chicken dish</string>
    <string name="fragment_register_restaurant_spinner_drawable">house</string>
    <string name="fragment_register_restaurant_image_view_restaurant_picture">Add Store picture</string>
    <string name="fragment_register_image_view_customer">Add picture</string>
    <string name="cart">Cart</string>
    <string name="calculator">Calculator</string>
    <string name="notification">Notification</string>
    <string name="trash_bin">Trash_bin</string>
    <string name="edit">Edit</string>
    <string name="category">Category image</string>
    <string name="order_image">order image</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_phone_number">Not a valid phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="required_field">This Field is Required</string>

    <!-- Strings related to register  -->
    <string name="name">Name</string>
    <string name="restaurant_name">"Restaurant name"</string>
    <string name="restaurant_delivery_time">"Delivery time"</string>
    <string name="confirm_password">"Confirm password"</string>
    <string name="minimum_charge">Minimum charge</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="contact_data">Contact data</string>
    <string name="phone_number">Phone number</string>
    <string name="whats_app_number">WhatsApp number</string>
    <string name="restaurant_picture">Restaurant picture</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="chose_image">Chose image</string>
    <string name="chose_camera">Camera</string>
    <string name="chose_gallery">Gallery</string>
    <string name="select_file">Select File</string>
    <string name="choose_city">Choose city</string>
    <string name="choose_city_first">Choose city first</string>
    <string name="choose_region">Choose region</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="select_your_location">Please Select your Location</string>

    <!-- Strings related to Forgot password -->
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="send_code">Send code</string>
    <string name="please_enter_the_code">Please enter the code that was sent</string>
    <string name="the_code">The code</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="change_password">Change password</string>

    <!-- Strings related to home -->
    <string name="home">Home</string>
    <string name="edit_profile">Edit profile</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="my_categories">My Categories</string>
    <string name="double_click_to_exit">Press back again to exit</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category Image</string>
    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="edit_category">Edit Category</string>
    <string name="price">Price</string>
    <string name="product_name">Product name</string>
    <string name="brief_description">Brief description</string>
    <string name="offer_price">Offer price</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="preparing_time">Preparing time</string>
    <string name="status">Status</string>
    <string name="no_data_changed">You did not change data</string>

    <!-- Strings related to restaurant order -->
    <string name="completed_order">Completed Order</string>
    <string name="rejected_order">Rejected order</string>
    <string name="current_order">Current Order</string>
    <string name="pending_order">Pending Order</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delivery">Confirm delivery</string>
    <string name="item_order_customer_name">Customer : %1$s</string>
    <string name="item_order_number">Order number : %1$s </string>
    <string name="item_order_total">Total : %1$s Pounds</string>
    <string name="item_order_address">Address : %1$s</string>

    <!-- Strings related to order details-->
    <string name="order_details">Order details</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="order_item">Order item</string>
    <string name="quantity">Quantity</string>
    <string name="order_price">Order price: %1$s Pounds</string>
    <string name="order_delivery_cost">Delivery cost: %1$s c</string>
    <string name="payment_method">Payment method: %1$s</string>
    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_online">Online</string>

    <!-- Strings related to order cancellation reason dialog -->
    <string name="cancellation_reason">Cancellation reason</string>
    <string name="enter_cancellation_reason">Please enter cancellation reason</string>
    <string name="cancel_order">Cancel order</string>

    <!-- Strings related to restaurant more fragment-->
    <string name="my_offers">My offers</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About the App</string>
    <string name="comments_and_rate">Comments and Rate</string>
    <string name="logout">Logout</string>
    <string name="add_offer">Add offer</string>

    <!-- Strings related to restaurant offer details fragment-->
    <string name="offer_name">Offer name</string>
    <string name="offer_description">Offer description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="editOffer">Edit offer</string>

    <!-- Strings related to change password -->
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <!-- Strings related to restaurant commission fragment  -->
    <string name="commission">Commission</string>
    <string name="commission_description">Please transfer 10% of the sales profits within a maximum period of one month.\nNote that all orders will be registered on your personal account.</string>
    <string name="restaurant_sales">Restaurant sales: %1$s Pounds</string>
    <string name="application_commission">Application commission: %1$s Pounds</string>
    <string name="was_paid">Was paid: %1$s Pounds</string>
    <string name="the_rest">The rest: %1$s Pounds</string>
    <string name="bank_account">Bank account</string>
    <string name="saib_bank">Bank SAIB: 456456456</string>
    <string name="ahly_bank">Ahly bank: 789789789</string>

</resources>