<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_order_content_list_textView_name"
        style="@style/ItemTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/name" />

    <TextView
        android:id="@+id/item_order_content_list_textView_price"
        style="@style/ItemTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/price" />

    <TextView
        android:id="@+id/item_order_content_list_textView_quantity"
        style="@style/ItemTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quantity" />
</LinearLayout>