<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primaryDarkColor"
    tools:context=".FragmentForgotPasswordEnterEmail">

    <TextView
        android:id="@+id/fragment_forgot_password_enter_email_tv"
        style="@style/AuthBoldText"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/please_enter_your_email"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_forgot_password_enter_email_edit_text_email"
        style="@style/AuthEditText"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:autofillHints="@string/prompt_email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_enter_email_tv" />

    <Button
        style="@style/RedRadiusButton"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_64sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_64sdp"
        android:orientation="horizontal"
        android:text="@string/send_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_enter_email_edit_text_email" />
</androidx.constraintlayout.widget.ConstraintLayout>